--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,34 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # State Management
+  provider: ^6.0.5
+
+  # Firebase Core
+  firebase_core: ^2.15.1
+
+  # Firebase Authentication
+  firebase_auth: ^4.6.1
+
+  # Cloud Firestore Database
+  cloud_firestore: ^4.9.1
+
+  # Firebase Storage for images
+  firebase_storage: ^11.2.1
+
+  # For handling images from network/Storage
+  image_picker: ^0.8.7+3
+
+  # For Google Maps integration
+  google_maps_flutter: ^2.2.3
+  geolocator: ^11.0.1
+
+  # For smooth navigation and animations
+  page_transition: ^2.0.5
+
+  # For intl (internationalization) and date formatting
+  intl: ^0.18.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
